--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ after_success:
   - docker push yalecthub/reverseproxy:v1
   - docker push yalecthub/udagram-api-user:v1
   - docker push yalecthub/udagram-api-feed:v1
-  - docker push yalecthub/udagram-frontend:v1
+  - docker push yalecthub/udagram-frontend:latest
