:heavy_plus_sign: Add code to file

--- a/env-configmap.yaml
+++ b/env-configmap.yaml
@@ -4,9 +4,9 @@ metadata:
   name: env-configmap
 data:
   POSTGRES_DB: postgres
-  POSTGRES_HOST: $POSTGRES_HOST
+  POSTGRES_HOST: database-1.c020fgx8stzo.us-east-1.rds.amazonaws.com
   AWS_REGION: us-east-1
   AWS_PROFILE: default
-  AWS_BUCKET: $AWS_BUCKET
+  AWS_BUCKET: project-162760234586-dev
   JWT_SECRET: testing
   URL: http://localhost:8100
