--- a/env-configmap.yaml
+++ b/env-configmap.yaml
@@ -4,9 +4,9 @@ metadata:
   name: env-configmap
 data:
   POSTGRES_DB: postgres
-  POSTGRES_HOST: database-1.cey5q3bpgb1e.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: database-1.cajhrannowrw.us-east-1.rds.amazonaws.com
   AWS_REGION: us-east-1
-  AWS_PROFILE: yalectmicro
-  AWS_BUCKET: my-424752689993-bucket
+  AWS_PROFILE: default
+  AWS_BUCKET: project-124302375113-microservices
   JWT_SECRET: testing
   URL: http://localhost:8100
